--- a/Analysis_EDA.ipynb
+++ b/Analysis_EDA.ipynb
@@ -1414,8 +1414,7 @@
         "3. **Total Sessions**(A model estimate of the total number of sessions since a user has onboarded)**:**\n",
         "  * The total_sessions is a **right-skewed distribution** that looks more normal than the previous variables. The median total number of sessions is 159.6. This is interesting information because, if the median number of sessions in the last month was 48 and the median total sessions was ~160, then it seems that a large proportion of a user's total drives might have taken place in the last month. This is something you can examine more closely later.\n",
         "4. **n_days_after_onboarding**(The number of days since a user signed up for the app)**:**\n",
-        "  * The total user tenure (i.e., number of days since\n",
-        "onboarding) is a **uniform distribution** with values ranging from near-zero to \\~3,500 (\\~9.5 years).\n",
+        "  * The total user tenure (i.e., number of days since onboarding) is a **uniform distribution** with values ranging from near-zero to \\~3,500 (\\~9.5 years).\n",
         "5. **driven_km_drives**(Total kilometers driven during the month)**:**\n",
         "  * The number of drives driven in the last month per user resembles a **right-skewed normal distribution** with half the users driving under 3,495 kilometers. As you discovered in the analysis from the previous course, the users in this dataset drive a lot. The longest distance driven in the month was over half the circumferene of the earth.\n",
         "6. **duration_minutes_drives**(Total duration driven in minutes during the month)**:**\n",
